2002-06-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* VERSION (PACKAGE_NAME): Typo fix.

2002-06-23  Han-Wen  <hanwen@cs.uu.nl>

	* input/tutorial/brahms-*.ly: new tutorial files.

	* Documentation/user/tutorial.itely: fixes. Extend cheat sheet.

	* scm/script.scm (default-script-alist): fermata is up.

	* lily/dynamic-engraver.cc (stop_translation_timestep): stop
	dynamic line spanner when there is no crescendo to connect.

	* lily/tie.cc (get_control_points): add test to avoid flat ties.

2002-06-22  Han-Wen  <hanwen@cs.uu.nl>

	* lily/note-collision.cc (check_meshing_chords): don't crash if no
	stems.

	* scm/music-functions.scm (toplevel-music-functions): new
	definition. Functions to apply automatically. Removes the need for
	explicitly doing \apply #voicify-music

	* lily/grob.cc (do_break_substitution): rename function, use
	global var for criterion argument. Reduces stack usage a little.

	* ly/engraver-init.ly (StaffContext): add Instrument_engraver

	* scripts/convert-ly.py, lily/*.cc, scm/*.scm: change
	visibility-lambda to break-visibility

2002-06-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/bugs/part-combiner.ly: New file.

	* lily/include/spacing-interface.hh: New file.

	* lily/include/spaceable-element.hh: Remove.

	* input/test/script-priority.ly: New file.

2002-06-20  Han-Wen  <hanwen@cs.uu.nl>

	* lily/system.cc (output_lines): kill grobs that are only for spacing.

2002-06-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/fingering-engraver.cc (make_script): 
	* lily/script-engraver.cc (process_music): 
	* lily/text-engraver.cc: 
	(process_acknowledged_grobs): Remove hard coded script-priority.

	* flower/warn.cc: Cleanup.

	* lily/voice-devnull-engraver.cc: Also eat multi-measure rest, a
	spanner now.

	* aclocal.m4: Regenerate.

	* stepmake/aclocal.m4: Also set GUILE_PATCH_LEVEL.

	* config.hh.in: Only set GUILE_MAJOR_VERSION if necessary.
	* lily/include/lily-guile.hh: Only include config.h if necessary.
